--- a/4_lab/nginx-configmap.yml
+++ b/4_lab/nginx-configmap.yml
@@ -37,7 +37,7 @@ data:
         server {
             listen 80;
             server_name _;
-            
+           
             location /health {
                 access_log off;
                 return 200 "healthy\n";
@@ -51,6 +51,7 @@ data:
                 proxy_set_header X-Real-IP $remote_addr;
                 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
                 proxy_set_header X-Forwarded-Proto $scheme;
+                proxy_set_header Origin "";
                 proxy_redirect off;
 
                 # WebSocket support
@@ -67,7 +68,17 @@ data:
                 proxy_set_header X-Real-IP $remote_addr;
                 proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
                 proxy_set_header X-Forwarded-Proto $scheme;
+                proxy_set_header Origin "";
                 proxy_redirect off;
+                
+                # CORS headers
+                add_header Access-Control-Allow-Origin * always;
+                add_header Access-Control-Allow-Methods * always;
+                add_header Access-Control-Allow-Headers * always;
+                add_header Access-Control-Allow-Credentials true always;
+                
+                # Cookie handling for XSRF
+                proxy_cookie_path / "/; SameSite=Lax; Secure";
                 
                 # WebSocket support
                 proxy_http_version 1.1;
