fix base mistakes in google sheets

--- a/3_lab/nextcloud-deployment.yml
+++ b/3_lab/nextcloud-deployment.yml
@@ -20,52 +20,11 @@ spec:
           ports:
             - name: http
               containerPort: 80
-          env:
-            - name: NEXTCLOUD_UPDATE
-              valueFrom:
-                configMapKeyRef:
-                  name: nextcloud-config
-                  key: NEXTCLOUD_UPDATE
-            - name: ALLOW_EMPTY_PASSWORD
-              valueFrom:
-                configMapKeyRef:
-                  name: nextcloud-config
-                  key: ALLOW_EMPTY_PASSWORD
-            - name: POSTGRES_HOST
-              valueFrom:
-                configMapKeyRef:
-                  name: nextcloud-config
-                  key: POSTGRES_HOST
-            - name: POSTGRES_DB
-              valueFrom:
-                configMapKeyRef:
-                  name: nextcloud-config
-                  key: POSTGRES_DB
-            - name: NEXTCLOUD_TRUSTED_DOMAINS
-              valueFrom:
-                configMapKeyRef:
-                  name: nextcloud-config
-                  key: NEXTCLOUD_TRUSTED_DOMAINS
-            - name: NEXTCLOUD_ADMIN_USER
-              valueFrom:
-                configMapKeyRef:
-                  name: nextcloud-config
-                  key: NEXTCLOUD_ADMIN_USER
-            - name: POSTGRES_USER
-              valueFrom:
-                secretKeyRef:
-                  name: nextcloud-secret
-                  key: POSTGRES_USER
-            - name: POSTGRES_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: nextcloud-secret
-                  key: POSTGRES_PASSWORD
-            - name: NEXTCLOUD_ADMIN_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: nextcloud-secret
-                  key: NEXTCLOUD_ADMIN_PASSWORD
+          envFrom:
+            - configMapRef:
+                name: nextcloud-config
+            - secretRef:
+                name: nextcloud-secret
           resources:
             limits:
               cpu: 500m
