--- a/2_lab/docker-compose.yml
+++ b/2_lab/docker-compose.yml
@@ -7,14 +7,8 @@ services:
     depends_on:
       postgres:
         condition: service_healthy
-    environment:
-      PGHOST: ${POSTGRES_HOST}
-      PGPORT: ${POSTGRES_PORT}
-      PGUSER: ${POSTGRES_USER}
-      PGPASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
+    env_file:
+      - .env
     volumes:
       - ./init.sql:/init.sql:ro
       - ./scripts/init-db.sh:/init-db.sh:ro
@@ -22,11 +16,11 @@ services:
     command: >
       -c "
         echo 'Waiting for PostgreSQL to be ready...';
-        until pg_isready -h postgres -U ${POSTGRES_USER} -d ${POSTGRES_DB}; do
+        until pg_isready -h postgres -U $${POSTGRES_USER} -d $${POSTGRES_DB}; do
           sleep 1;
         done;
         echo 'PostgreSQL is ready! Running initialization scripts...';
-        psql -h postgres -U ${POSTGRES_USER} -d ${POSTGRES_DB} -f /init.sql;
+        psql -h postgres -U $${POSTGRES_USER} -d $${POSTGRES_DB} -f /init.sql;
         /init-db.sh;
         echo 'Database initialization completed!';
       "
@@ -53,10 +47,9 @@ services:
     hostname: postgres
     networks:
       - jupyterhub-network
+    env_file:
+      - .env
     environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_INITDB_ARGS: "-E UTF8 --locale=C"
       PGDATA: /var/lib/postgresql/data/pgdata
     volumes:
@@ -77,7 +70,7 @@ services:
       -c min_wal_size=1GB
       -c max_wal_size=4GB
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
+      test: ["CMD-SHELL", "pg_isready -U $${POSTGRES_USER} -d $${POSTGRES_DB}"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -104,9 +97,11 @@ services:
     hostname: redis
     networks:
       - jupyterhub-network
+    env_file:
+      - .env
     command: >
       redis-server
-      --requirepass ${REDIS_PASSWORD}
+      --requirepass $${REDIS_PASSWORD}
       --maxmemory 512mb
       --maxmemory-policy allkeys-lru
       --appendonly yes
@@ -157,20 +152,13 @@ services:
       - jupyterhub-data:/home/jovyan/jupyter
       - jupyterhub-logs:/var/log/jupyterhub
       - ./notebooks:/home/jovyan/notebooks:ro
+    env_file:
+      - .env
     environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
-      POSTGRES_HOST: ${POSTGRES_HOST}
-      POSTGRES_PORT: ${POSTGRES_PORT}
-      REDIS_HOST: ${REDIS_HOST}
-      REDIS_PORT: ${REDIS_PORT}
-      REDIS_PASSWORD: ${REDIS_PASSWORD}
-      JUPYTERHUB_LOG_LEVEL: ${JUPYTERHUB_LOG_LEVEL:-INFO}
       PYTHONUNBUFFERED: "1"
     command: >
       jupyterhub
-      --log-level=${JUPYTERHUB_LOG_LEVEL:-INFO}
+      --log-level=$${JUPYTERHUB_LOG_LEVEL:-INFO}
       -f /srv/jupyterhub_config.py
     healthcheck:
       test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost:8000/hub/health"]
