--- a/4_lab/postgres-deployment.yml
+++ b/4_lab/postgres-deployment.yml
@@ -18,32 +18,40 @@ spec:
         version: v1
         component: database
     spec:
+      initContainers:
+        - name: init-db-scripts
+          image: busybox:1.36
+          command:
+            - sh
+            - -c
+            - |
+              echo "Copying init scripts to shared volume..."
+              cp /init-scripts/* /docker-entrypoint-initdb.d/
+              chmod +x /docker-entrypoint-initdb.d/*.sh
+              echo "Init scripts copied successfully"
+          volumeMounts:
+            - name: init-scripts
+              mountPath: /init-scripts
+            - name: initdb-scripts
+              mountPath: /docker-entrypoint-initdb.d
       containers:
         - name: postgres-container
           image: postgres:14
           ports:
             - containerPort: 5432
+          envFrom:
+            - configMapRef:
+                name: postgres-config
+            - secretRef:
+                name: postgres-secret
           env:
-            - name: POSTGRES_DB
-              valueFrom:
-                configMapKeyRef:
-                  name: postgres-config
-                  key: POSTGRES_DB
-            - name: POSTGRES_USER
-              valueFrom:
-                secretKeyRef:
-                  name: postgres-secret
-                  key: POSTGRES_USER
-            - name: POSTGRES_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: postgres-secret
-                  key: POSTGRES_PASSWORD
             - name: PGDATA
               value: /var/lib/postgresql/data/pgdata
           volumeMounts:
             - name: postgres-storage
               mountPath: /var/lib/postgresql/data
+            - name: initdb-scripts
+              mountPath: /docker-entrypoint-initdb.d
           resources:
             limits:
               cpu: 1000m
@@ -79,4 +87,9 @@ spec:
         - name: postgres-storage
           persistentVolumeClaim:
             claimName: postgres-pvc
+        - name: init-scripts
+          configMap:
+            name: postgres-init-scripts
+        - name: initdb-scripts
+          emptyDir: {}
       restartPolicy: Always
