fix env & secrets in lab3

--- a/3_lab/nextcloud-configmap.yml
+++ b/3_lab/nextcloud-configmap.yml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: nextcloud
 data:
-  NEXTCLOUD_UPDATE: "1"
   POSTGRES_HOST: "postgres-service"
   POSTGRES_DB: "nextcloud"
   NEXTCLOUD_TRUSTED_DOMAINS: "127.0.0.1 localhost nextcloud nextcloud.default.svc nextcloud.default.svc.cluster.local"
+  ALLOW_EMPTY_PASSWORD: "no"
