--- a/3_lab/nextcloud-secret.yml
+++ b/3_lab/nextcloud-secret.yml
@@ -6,5 +6,5 @@ metadata:
     app: nextcloud
 type: Opaque
 stringData:
-  POSTGRES_USER: "postgres"
-  POSTGRES_PASSWORD: "strong_password_here"
+  NEXTCLOUD_ADMIN_USER: "nc_admin"
+  NEXTCLOUD_ADMIN_PASSWORD: "super_secret_here"
